--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,12 @@
+sudo: false
 language: node_js
-  node_js:
-    - "stable"
+node_js:
+  - 'stable'
+branches:
+  only:
+    - master
+cache:
+  directories:
+    - node_modules
+script:
+  - npm test
