--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   "devDependencies": {
     "@types/jest": "^26.0.12",
     "@types/node": "^14.6.1",
-    "jest": "^26.4.2",
-    "supertest": "^4.0.2"
+    "jest": "^26.4.2"
   }
 }
